update logo, index, constants, style

--- a/less/onlyhome.less
+++ b/less/onlyhome.less
@@ -17,18 +17,19 @@ html{
 						text-align: center;
 						margin-top:0px;
 						.social-icon-container{
-							margin:0px 5px 15px 5px;
+							margin:0px 10px 15px 10px;
 							text-align:center;
-							border:10px solid @color;
+							//border:10px solid @gray-darkest;
 							z-index: 1000;
 							background-color: @background-color;
-							width:80px;
-							height:80px;
+							//width:80px;
+							//height:80px;
 							.inline-block();
 							.fa{
-								line-height:80px;
-								width:80px;
-								height:80px;
+								color:@color;
+								line-height:90px;
+								width:90px;
+								height:90px;
 							}
 							.border-radius(50%);
 						}
@@ -38,6 +39,8 @@ html{
 							width:350px;
 							height:auto;
 							cursor:pointer;
+							
+							
 							.inline-block();
 						}
 					}
