--- a/less/variables.less
+++ b/less/variables.less
@@ -6,16 +6,17 @@
 @gray-lighter: #eeeeee; 
 @gray-lightest: #f7f7f7;
 
-@green-dark: rgb(23,69,32);
+@green-dark: #174520;
 @green-light: rgb(39,174,96);
 
-@yellow-light: rgb(252,239,76);
-@red: #d41f00;
+@yellow-light:#fcef4c;
+@red: #880000;
 @yellow: #ffff00;
 @yellow-2: #EBFF15;
 @orange: #ff6600;
 @green: #1c7228;
 @blue: #007ad4;
+@blue-light: #0A64F2;
 @white: #ffffff;
 @black: #000000;
 
